package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public class DomesticEngine implements IEngine {
    @Override
    public void engine() {
        System.out.println("国产发动机");
    }
}
