package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public interface IBrake {
    void brake();//制动系统
}
