package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public interface IEngine {
    void engine();//发动机
}
