package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public interface ITire {
    void tire();//轮胎
}
