package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public class ImportEngine implements IEngine {
    @Override
    public void engine() {
        System.out.println("进口发动机");
    }
}
