package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public class SeniorBrake implements IBrake {
    @Override
    public void brake() {
        System.out.println("高级制动");
    }
}
