package com.baoge.designpattern.chuangjianxing.p03_chouxianggongchang;

public class SuvTire implements ITire {
    @Override
    public void tire() {
        System.out.println("越野轮胎");
    }
}
